--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,10 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src", "prisma"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "prisma/**/*.ts"
+  ]
 }
