--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - MONGODB_URI=mongodb://mongodb:27017/nest-blog
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
 
   postgres:
     image: postgres:16
