--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "postinstall": "prisma generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -19,7 +18,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "// --- POSTGRES SCRIPTS ---": "",
+    "prisma:generate:postgres": "prisma generate --schema=./prisma/schema.prisma",
+    "prisma:migrate:dev": "prisma migrate dev --schema=./prisma/schema.prisma",
+    "// --- MONGO SCRIPTS ---": "",
+    "mongo:generate": "prisma generate --schema ./prisma-mongo/schema.prisma",
+    "mongo:dbpush": "prisma db push --schema ./prisma-mongo/schema.prisma"
+   
+
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -86,3 +93,4 @@
     "seed": "tsx prisma/seed.ts"
   }
 }
+
