fix:removed category table

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,23 @@ services:
     build:
       context: .
       target: development
-    # Use the entrypoint script
     entrypoint: /usr/src/app/entrypoint.sh
     command: pnpm run start:dev
     ports:
       - "3000:3000"
     depends_on:
-      - postgres
-      - mongodb
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
     environment:
-      # Keep your existing PostgreSQL URL
       - DATABASE_URL=postgresql://user:password@postgres:5432/nest-blog
-      # --- ADD THIS LINE ---
       - MONGODB_URI=mongodb://mongodb:27017/nest-blog?replicaSet=rs0
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
 
   postgres:
-    # ... (no changes needed here)
     image: postgres:16
     ports:
       - "5432:5432"
@@ -31,16 +29,22 @@ services:
       - POSTGRES_DB=nest-blog
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      # --- THIS IS THE FIX ---
+      # Add the '-d nest-blog' flag to specify the database name
+      test: ["CMD-SHELL", "pg_isready -U user -d nest-blog"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   mongodb:
-    # ... (no changes needed here)
     image: mongo:7
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
     command: ["--replSet", "rs0", "--bind_ip_all"]
+
 volumes:
   postgres_data:
   mongodb_data:
-
