--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "// --- MONGO SCRIPTS ---": "",
     "mongo:generate": "prisma generate --schema ./prisma-mongo/schema.prisma",
     "mongo:dbpush": "prisma db push --schema ./prisma-mongo/schema.prisma"
-   
-
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -38,6 +36,7 @@
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "nestjs-zod": "^5.0.1",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
@@ -54,6 +53,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -93,4 +93,3 @@
     "seed": "tsx prisma/seed.ts"
   }
 }
-
